# vendor_qcom_proprietary

./: .gitignore
gps/slim/: Android.bp  Android.mk  Makefile.am  configure.ac
mm-audio-auto/auto-audiod/: AutoAudioDaemon.cpp  AutoAudioDaemon.h  Makefile.am  audiod.pc.in  auto_audio_ext.cpp  auto_audio_ext.h  configure.ac
qcril-data-hal/: Android.bp  CMakeLists.txt
qcril-data-hal/Messages/: Android.bp  Android.mk  CMakeLists.txt
qcril-data-hal/iwlanservice/: IWlanImpl.cpp  IWlanImpl.h  IWlanModule.cpp  IWlanModule.h  IWlanServiceFactory.h
qcril-nr/: .clang-format  Android.bp  Android.mk  CMakeLists.txt  clean.sh  runTest.sh
qcril-nr/android_hal_utils/: Android.bp
qcril-nr/cmas/: Android.bp  CMakeLists.txt
qcril-nr/include/: qcril_features_def.h
qcril-nr/nanopb/: Android.mk  pb_decode.c
qcril-nr/qcril_client/: Android.mk  CMakeLists.txt  RequestManager.cpp  RequestManager.hpp  RilApiSession.cpp  RilApiSession.hpp  Status.hpp  sample.cpp
qcril-nr/qcril_qmi/: Android.mk  CMakeLists.txt  legacy.cc  qcril.cc  qcril_am.cc  qcril_am.h  qcril_cm_ss.cc  qcril_cm_ss.h  qcril_cm_util.cc  qcril_cm_util.h  qcril_cmi.h  qcril_event.cc  qcril_eventlist.h  qcril_log.cc  qcril_log.h  qcril_other.cc  qcril_other.h  qcril_pbm.cc  qcril_pbm.h  qcril_pd_notifier.cc  qcril_pd_notifier.h  qcril_qmi_cell_info.cc  qcril_qmi_cell_info_v12.cc  qcril_qmi_client.cc  qcril_qmi_pil_monitor.cc  qcril_reqlist.h  qcrili.h  qmi_ril_file_observer.cc  qmi_ril_platform_dep.cc
qmi-framework/: Android.bp  Android.mk  Makefile.am  configure.ac  qmi-framework.pc.in
qmi-framework/encdec/: qmi_idl_accessor.c
qmi-framework/inc/: qmi_client.h  qmi_csi_target_ext.h  qmi_fw_debug.h  qmi_port_defs.h  qmi_sap.h  qmi_sap_target_ext.h  service_access_proxy_v01.h
qmi-framework/qrtr/: Android.mk  LICENSE  Makefile  Makefile.am  NOTICE
qmi-framework/qsocket/: Android.mk
qmi-framework/smem_log/: Android.mk  smem_log.c  smem_log.h
qmi-framework/system_health_monitor/: Android.mk  sys_health_mon.c  sys_health_mon.h
qmi-framework/test_service/: Android.bp  Makefile.am  check_system_health.c  qmi_test_mt_client_init_instance.c  qmi_test_service_clnt.c  qmi_test_service_clnt_common.c  qmi_test_service_clnt_common.h  qmi_test_service_clnt_common_stats.c  qmi_test_service_clnt_common_stats.h  qmi_test_service_clnt_test_0000.c  qmi_test_service_clnt_test_0001.c  qmi_test_service_clnt_test_1000.c  qmi_test_service_clnt_test_1001.c  qmi_test_service_clnt_test_2000.c  qmi_test_service_clnt_test_3000.c  qmi_test_service_clnt_test_3001.c  qmi_test_service_clnt_test_4000.c  qmi_test_service_clnt_test_4001.c  qmi_test_service_ping_svc.c  qmi_test_service_start_svc.c  test_service_v01.c  test_service_v01.h
remotefs/: Makefile.am  configure.ac  rmt_storage.service  rmt_storage.sh  rmtstorage.rules
remotefs/qmi_rmt_storage/: rmt_storage_svc.c
securemsm/: Makefile.am  configure.ac  platform__vendor__qcom-proprietary__ship__securemsm_oscf_lv.json
securemsm/GPTEE/: Android.bp
securemsm/GPTEE_Sample_client/: GPTEE_Sample_client.cpp  GPTEE_Sample_client.h  Makefile.am
securemsm/QPAY_esehal/: Android.mk  QPayAdapter-apdu.h  QPayAdapter-utils.cpp  QPayAdapter.cpp  QPayAdapter.h  esepm.cpp
securemsm/QSEEComAPI/: Android.bp  Android.mk  QSEEComAPI.h
securemsm/acvp_test/: ACVP.py  Android.mk
securemsm/config/: cpz_vendor_proprietary_board.mk  cpz_vendor_proprietary_product.mk  eid_vendor_proprietary_board.mk  eid_vendor_proprietary_product.mk  faceauth_vendor_proprietary_board.mk  faceauth_vendor_proprietary_product.mk  gp_vendor_proprietary_product.mk  gpqese_vendor_proprietary_board.mk  gpqese_vendor_proprietary_product.mk  identity_vendor_proprietary_board.mk  identity_vendor_proprietary_product.mk  keymaster_vendor_proprietary_board.mk  keymaster_vendor_proprietary_product.mk  qseecomd_vendor_proprietary_product.mk  seemp_healthd_vendor_proprietary_product.mk  smcinvoke_vendor_proprietary_product.mk  soter_vendor_proprietary_board.mk  soter_vendor_proprietary_product.mk  spu_hal_vendor_proprietary_product.mk  tloc_vendor_proprietary_product.mk
securemsm/cryptfshw_common/: Android.mk
securemsm/daemon/: Android.mk  Makefile.am  gpfspath_lv_oem_config.xml  qseecomd.c  qseecomd_static.c
securemsm/diag_daemon/: Android.mk  Makefile.am  diag_dispatch.c  diagcomm.h  diagcommd.c
securemsm/esehal/: Android.mk
securemsm/esepowermanager/: Android.bp  EsePMClient.cpp
securemsm/identity_credential/: Android.mk
securemsm/keymaster_install_toolbox/: Android.mk  DeviceIdProvision.cpp  InstallKeybox.cpp  InstallKeybox.h  VerifyAttestation.cpp  VerifyAttestation.h
securemsm/keymaster_utils/: Android.mk  KeymasterBuffer.h  KeymasterCryptoDevice.h  KeymasterHalDevice.h  KeymasterHalDeviceExt.h  KeymasterKeyProvision.h  KeymasterUtils.h  NOTICE  android.hardware.keymaster@4.1-service-default-and-strongbox-qti.xml  android.hardware.keymaster@4.1-strongbox-service-qti.rc  android.hardware.strongbox_keystore.xml  android_keymaster_test.h  android_keymaster_utils.h  attestation_record.cpp  attestation_record.h  authorization_set.cpp  authorization_set.h  hmac_builder.h  keymaster_tags.h  serializable.cpp  serializable.h
securemsm/km_lite/: Makefile.am  NOTICE  keymaster.h  keymaster_defs.h  keymaster_utils.h
securemsm/sampleclient/: Android.mk  Makefile.am  qseecom_sample_client.c
securemsm/security_profiles/: atherton_tz_security_profile.xml
securemsm/smcinvoke/: Android.mk  Makefile.am  configure.ac  minkipc.pc.in
securemsm/smcinvokesample/: Android.mk
securemsm/soterclient/: Android.mk
securemsm/sp_license_sample/: Android.mk  LICENSE  NOTICE  sp_license_sample.c
securemsm/sputestclient/: Android.mk
securemsm/tlsauth/: Makefile.am  qautheng.c
sensors-see/: Android.bp  Makefile.am  NOTICE  configure.ac  sensors-see.pc.in
sensors-see/QSensorTest/: Android.bp
sensors-see/build_config/: sns_vendor_board.mk  sns_vendor_product.mk
sensors-see/direct_channel_stub/: Android.bp  Makefile.am
sensors-see/nanopb/: Android.bp  Makefile.am  NOTICE
sensors-see/registry/: Android.mk  Makefile.am  (+2 more)
(+6555 files in other folders)
